Packer2.Library/MinifiedQueryParser/generated/pbiqParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Projects\Packer\Packer2.Library\MinifiedQueryParser\pbiqParser.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Packer2 {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class pbiqParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		FROM=1, AS=2, IN=3, WITH=4, NATIVEREFERENCENAME=5, DOT=6, AND=7, OR=8, 
		NOT=9, WHERE=10, ORDERBY=11, ASCENDING=12, DESCENDING=13, SELECT=14, SKIP_=15, 
		TOP=16, SCOPE=17, SCOPEDEVAL=18, DATESPAN=19, USING=20, ANYVALUE=21, DEFAULTVALUEOVERRIDESANCESTORS=22, 
		TRANSFORM=23, VIA=24, NULL=25, TRUE=26, FALSE=27, BETWEEN=28, CONTAINS=29, 
		HIERARCHY=30, LEVEL=31, AS_=32, INTEGER=33, INTEGER_LITERAL=34, DOUBLE_LITERAL=35, 
		DECIMAL_LITERAL=36, DATE=37, DATETIMESECOND=38, DATETIME=39, BASE64BYTES_LITERAL=40, 
		DATEIME_LITERAL=41, SINGLE_QUOTE=42, LPAREN=43, RPAREN=44, LCURLY=45, 
		RCURLY=46, COMMA=47, GT=48, GTE=49, LT=50, LTE=51, EQ=52, STRING_LITERAL=53, 
		IDENTIFIER=54, BINARY_ARITHMETIC_OPERATOR=55, WS=56;
	public const int
		RULE_root = 0, RULE_query = 1, RULE_from = 2, RULE_fromElement = 3, RULE_expressionContainer = 4, 
		RULE_where = 5, RULE_queryFilterElement = 6, RULE_alias = 7, RULE_entity = 8, 
		RULE_schema = 9, RULE_entity_name = 10, RULE_orderby = 11, RULE_orderbySection = 12, 
		RULE_direction = 13, RULE_groupby = 14, RULE_skip = 15, RULE_top = 16, 
		RULE_select = 17, RULE_expression = 18, RULE_nonFilterExpression = 19, 
		RULE_filterExpression = 20, RULE_nonLeftRecursiveFilterExpression = 21, 
		RULE_subQueryExpr = 22, RULE_sourceRefExpr = 23, RULE_aggregationExpr = 24, 
		RULE_anyValueExpr = 25, RULE_andExpr = 26, RULE_orExpr = 27, RULE_betweenExpr = 28, 
		RULE_nullEpr = 29, RULE_intExpr = 30, RULE_decimalExpr = 31, RULE_datetimeExpr = 32, 
		RULE_dateExpr = 33, RULE_hierarchyExpr = 34, RULE_hierarchyLevelExpr = 35, 
		RULE_datetimeSecExpr = 36, RULE_dateSpanExpr = 37, RULE_containsExpr = 38, 
		RULE_stringExpr = 39, RULE_boolExp = 40, RULE_comparisonExpr = 41, RULE_propertyExpression_seg = 42, 
		RULE_notExpr = 43, RULE_scopedEvalExpr = 44, RULE_literalExpr = 45, RULE_inExpr = 46, 
		RULE_inExprValues = 47, RULE_expressionOrExpressionList = 48, RULE_arithmenticExpr = 49, 
		RULE_orderByClause = 50, RULE_timeUnit = 51, RULE_tableName = 52, RULE_equalityKind = 53, 
		RULE_left = 54, RULE_right = 55, RULE_first = 56, RULE_second = 57, RULE_operator = 58;
	public static readonly string[] ruleNames = {
		"root", "query", "from", "fromElement", "expressionContainer", "where", 
		"queryFilterElement", "alias", "entity", "schema", "entity_name", "orderby", 
		"orderbySection", "direction", "groupby", "skip", "top", "select", "expression", 
		"nonFilterExpression", "filterExpression", "nonLeftRecursiveFilterExpression", 
		"subQueryExpr", "sourceRefExpr", "aggregationExpr", "anyValueExpr", "andExpr", 
		"orExpr", "betweenExpr", "nullEpr", "intExpr", "decimalExpr", "datetimeExpr", 
		"dateExpr", "hierarchyExpr", "hierarchyLevelExpr", "datetimeSecExpr", 
		"dateSpanExpr", "containsExpr", "stringExpr", "boolExp", "comparisonExpr", 
		"propertyExpression_seg", "notExpr", "scopedEvalExpr", "literalExpr", 
		"inExpr", "inExprValues", "expressionOrExpressionList", "arithmenticExpr", 
		"orderByClause", "timeUnit", "tableName", "equalityKind", "left", "right", 
		"first", "second", "operator"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "'''", "'('", "')'", "'{'", "'}'", 
		"','", "'>'", "'>='", "'<'", "'<='", "'='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "FROM", "AS", "IN", "WITH", "NATIVEREFERENCENAME", "DOT", "AND", 
		"OR", "NOT", "WHERE", "ORDERBY", "ASCENDING", "DESCENDING", "SELECT", 
		"SKIP_", "TOP", "SCOPE", "SCOPEDEVAL", "DATESPAN", "USING", "ANYVALUE", 
		"DEFAULTVALUEOVERRIDESANCESTORS", "TRANSFORM", "VIA", "NULL", "TRUE", 
		"FALSE", "BETWEEN", "CONTAINS", "HIERARCHY", "LEVEL", "AS_", "INTEGER", 
		"INTEGER_LITERAL", "DOUBLE_LITERAL", "DECIMAL_LITERAL", "DATE", "DATETIMESECOND", 
		"DATETIME", "BASE64BYTES_LITERAL", "DATEIME_LITERAL", "SINGLE_QUOTE", 
		"LPAREN", "RPAREN", "LCURLY", "RCURLY", "COMMA", "GT", "GTE", "LT", "LTE", 
		"EQ", "STRING_LITERAL", "IDENTIFIER", "BINARY_ARITHMETIC_OPERATOR", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "pbiqParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static pbiqParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public pbiqParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public pbiqParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class RootContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QueryContext query() {
			return GetRuleContext<QueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(pbiqParser.Eof, 0); }
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(Context, State);
		EnterRule(_localctx, 0, RULE_root);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			query();
			State = 119;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QueryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FromContext from() {
			return GetRuleContext<FromContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhereContext where() {
			return GetRuleContext<WhereContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OrderbyContext orderby() {
			return GetRuleContext<OrderbyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectContext select() {
			return GetRuleContext<SelectContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GroupbyContext groupby() {
			return GetRuleContext<GroupbyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SkipContext skip() {
			return GetRuleContext<SkipContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TopContext top() {
			return GetRuleContext<TopContext>(0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryContext query() {
		QueryContext _localctx = new QueryContext(Context, State);
		EnterRule(_localctx, 2, RULE_query);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			from();
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHERE) {
				{
				State = 122;
				where();
				}
			}

			State = 126;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 125;
				orderby();
				}
				break;
			}
			State = 129;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SELECT) {
				{
				State = 128;
				select();
				}
			}

			State = 132;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ORDERBY) {
				{
				State = 131;
				groupby();
				}
			}

			State = 135;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SKIP_) {
				{
				State = 134;
				skip();
				}
			}

			State = 138;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==TOP) {
				{
				State = 137;
				top();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FromContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FROM() { return GetToken(pbiqParser.FROM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FromElementContext[] fromElement() {
			return GetRuleContexts<FromElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FromElementContext fromElement(int i) {
			return GetRuleContext<FromElementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(pbiqParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(pbiqParser.COMMA, i);
		}
		public FromContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_from; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFrom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FromContext from() {
		FromContext _localctx = new FromContext(Context, State);
		EnterRule(_localctx, 4, RULE_from);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140;
			Match(FROM);
			State = 141;
			fromElement();
			State = 146;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 142;
				Match(COMMA);
				State = 143;
				fromElement();
				}
				}
				State = 148;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FromElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AliasContext alias() {
			return GetRuleContext<AliasContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IN() { return GetToken(pbiqParser.IN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public EntityContext entity() {
			return GetRuleContext<EntityContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContainerContext expressionContainer() {
			return GetRuleContext<ExpressionContainerContext>(0);
		}
		public FromElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fromElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFromElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FromElementContext fromElement() {
		FromElementContext _localctx = new FromElementContext(Context, State);
		EnterRule(_localctx, 6, RULE_fromElement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 149;
			alias();
			State = 150;
			Match(IN);
			State = 153;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 151;
				entity();
				}
				break;
			case 2:
				{
				State = 152;
				expressionContainer();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContainerContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AS() { return GetToken(pbiqParser.AS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AliasContext alias() {
			return GetRuleContext<AliasContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WITH() { return GetToken(pbiqParser.WITH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NATIVEREFERENCENAME() { return GetToken(pbiqParser.NATIVEREFERENCENAME, 0); }
		public ExpressionContainerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressionContainer; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressionContainer(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContainerContext expressionContainer() {
		ExpressionContainerContext _localctx = new ExpressionContainerContext(Context, State);
		EnterRule(_localctx, 8, RULE_expressionContainer);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 155;
			expression();
			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AS) {
				{
				State = 156;
				Match(AS);
				State = 157;
				alias();
				}
			}

			State = 162;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WITH) {
				{
				State = 160;
				Match(WITH);
				State = 161;
				Match(NATIVEREFERENCENAME);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhereContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHERE() { return GetToken(pbiqParser.WHERE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public QueryFilterElementContext[] queryFilterElement() {
			return GetRuleContexts<QueryFilterElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public QueryFilterElementContext queryFilterElement(int i) {
			return GetRuleContext<QueryFilterElementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(pbiqParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(pbiqParser.COMMA, i);
		}
		public WhereContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_where; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhere(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhereContext where() {
		WhereContext _localctx = new WhereContext(Context, State);
		EnterRule(_localctx, 10, RULE_where);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 164;
			Match(WHERE);
			State = 165;
			queryFilterElement();
			State = 170;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 166;
				Match(COMMA);
				State = 167;
				queryFilterElement();
				}
				}
				State = 172;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QueryFilterElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FilterExpressionContext filterExpression() {
			return GetRuleContext<FilterExpressionContext>(0);
		}
		public QueryFilterElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_queryFilterElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQueryFilterElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryFilterElementContext queryFilterElement() {
		QueryFilterElementContext _localctx = new QueryFilterElementContext(Context, State);
		EnterRule(_localctx, 12, RULE_queryFilterElement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 173;
			filterExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AliasContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(pbiqParser.IDENTIFIER, 0); }
		public AliasContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_alias; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAlias(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AliasContext alias() {
		AliasContext _localctx = new AliasContext(Context, State);
		EnterRule(_localctx, 14, RULE_alias);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 175;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntityContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Entity_nameContext entity_name() {
			return GetRuleContext<Entity_nameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SchemaContext schema() {
			return GetRuleContext<SchemaContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(pbiqParser.DOT, 0); }
		public EntityContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entity; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntity(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntityContext entity() {
		EntityContext _localctx = new EntityContext(Context, State);
		EnterRule(_localctx, 16, RULE_entity);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 180;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				{
				State = 177;
				schema();
				State = 178;
				Match(DOT);
				}
				break;
			}
			State = 182;
			entity_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SchemaContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(pbiqParser.IDENTIFIER, 0); }
		public SchemaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_schema; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSchema(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SchemaContext schema() {
		SchemaContext _localctx = new SchemaContext(Context, State);
		EnterRule(_localctx, 18, RULE_schema);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 184;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Entity_nameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(pbiqParser.IDENTIFIER, 0); }
		public Entity_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entity_name; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntity_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Entity_nameContext entity_name() {
		Entity_nameContext _localctx = new Entity_nameContext(Context, State);
		EnterRule(_localctx, 20, RULE_entity_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 186;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrderbyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ORDERBY() { return GetToken(pbiqParser.ORDERBY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public OrderbySectionContext[] orderbySection() {
			return GetRuleContexts<OrderbySectionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OrderbySectionContext orderbySection(int i) {
			return GetRuleContext<OrderbySectionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(pbiqParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(pbiqParser.COMMA, i);
		}
		public OrderbyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orderby; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpbiqParserVisitor<TResult> typedVisitor = visitor as IpbiqParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrderby(this);
			else return visitor.VisitChildren(this);
		}
	}
